Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-9830

Inconsistent directory separators when generating SSH keys

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 2.8.1
    • Qt Creator 2.8.1
    • QNX Support
    • None
    • Windows 7 64 bit

      1. Start Creator with enabled Qnx plugin.
      2. Go to "Tools" -> "Options..." -> "Devices" -> "Devices".
      3. Click "Add..." and start creating a new BlackBerry device.
      4. Proceed to the "SSH Key Setup" page of the wizard.
      5. Click "Generate..." and select a location for the private key file.
      6. Wait until the keys have been generated.
        The dialog now uses backslashes for the private key file but forward slashes for the public key file:

      Both file paths should contain the same directory separators. Ideally, these should be the native separators, i.e. backslashes on Windows.
      When you select an existing file using the "Browse..." button, the dialog shows correct separators.

        1. slashes.png
          40 kB
          Robert Löhning
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mfekari Mehdi Fekari
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes