Qnx: Use native separators when generating SSH keys

Task-number: QTCREATORBUG-9830

Change-Id: Icab0b46b5e35439e4e6f98f244e8aaa0cc559af0
Reviewed-by: Robert Loehning <robert.loehning@digia.com>